# UGV-Dynamic-Obstacle-Avoidance

./: AStar.cpp  README.md  controller.py  global_pathmaker_node.cpp  recorder.py  wpt_loader.py
a_star_planner/: CMakeLists.txt  package.xml
a_star_planner/include/a_star_planner/: AStar.hpp
a_star_planner/src/: a_star_planner_node.cpp
